--- a/views/item.ejs
+++ b/views/item.ejs
@@ -6,5 +6,5 @@
 </ul>
 
 <form action="/items/<%= item.id %>/delete" method="POST">
-  <input type="submit">
+  <input type="submit" value="Delete">
 </form>
