--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,4 +1,4 @@
-<form action="/items/new" method="POST" enctype="multipart/form-data">
+<form action="/new" method="POST" enctype="multipart/form-data">
   <div>
     <label>Name <input name="name"></label>
   </div>
