--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,3 +1,5 @@
+<%- include('partials/nav') %>
+
 <form action="/new" method="POST" enctype="multipart/form-data">
   <div>
     <label>Name <input name="name"></label>
