--- a/views/item.ejs
+++ b/views/item.ejs
@@ -1,18 +1,26 @@
-<%- include('partials/nav') %>
+<!DOCTYPE html>
+<html>
+<head>
+  <%- include('partials/head') %>
+</head>
+<body>
+  <%- include('partials/nav') %>
 
-<h1><%= item.name %></h1>
+  <h1><%= item.name %></h1>
 
-<% item.images.forEach(img => { %>
-  <div>
-    <img src="/uploads/<%= img %>">
-  </div>
-<% }) %>
+  <% item.images.forEach(img => { %>
+    <div>
+      <img src="/uploads/<%= img %>">
+    </div>
+  <% }) %>
 
-<ul>
-  <li>ID: <%= item.id %></li>
-  <li>Amount: <%= item.amount %></li>
-</ul>
+  <ul>
+    <li>ID: <%= item.id %></li>
+    <li>Amount: <%= item.amount %></li>
+  </ul>
 
-<form action="/items/<%= item.id %>/delete" method="POST">
-  <input type="submit" value="Delete">
-</form>
+  <form action="/items/<%= item.id %>/delete" method="POST">
+    <input type="submit" value="Delete">
+  </form>
+</body>
+</html>
