--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,1 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: sans-serif;
+}
+</style>
