--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,3 +1,9 @@
+<style>
+nav {
+  padding: 4px;
+  border-bottom: 1px solid black;
+}
+</style>
 <nav id="nav">
   <a href="/">Inventory</a>
   |
@@ -11,5 +17,3 @@
     </form>
   <% } %>
 </nav>
-
-<hr>
