--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  height: 100%;
   font-family: sans-serif;
 }
 </style>
