--- a/views/list.ejs
+++ b/views/list.ejs
@@ -2,65 +2,83 @@
 <html>
 <head>
   <%- include('partials/head') %>
+  <style>
+    .panel-container {
+      display: flex;
+      flex-wrap: nowrap;
+    }
+    .panel-container.horizontal {
+      flex-direction: row;
+    }
+    .panel-container.vertical {
+      height: 100%;
+      flex-direction: column;
+    }
+    .panel {
+      flex-grow: 0;
+      flex-basis: auto;
+    }
+    .panel.fill {
+      flex-grow: 1;
+    }
+  </style>
 </head>
 <body>
+
   <style>
-  .main-container {
-    display: flex;
-    flex-flow: column;
-    height: 100%;
-  }
-  .nav-container {
-    flex: 0 1 auto;
-  }
-  .panel-container {
-    flex: 1 1 auto;
-  }
-
-  .panel-container {
-    display: flex;
-    flex-flow: row;
-    flex: 1 1 auto;
-  }
-  .item-panel {
-    flex: 1 1 auto;
-  }
-  .info-panel {
-    flex: 0 0 200px;
-  }
-
-  .item {
-    padding: 0;
-    margin: 0;
-    display: block;
-    width: 250px;
-    height: 300px;
-  }
+    #nav-panel {
+      flex-basis: 200px;
+      border-right: 1px solid black;
+    }
+    #item-list {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+    .item {
+      display: block;
+      margin: 0;
+      padding: 0;
+      width: 250px;
+      height: 300px;
+    }
+    #info-panel {
+      flex-basis: 200px;
+      border-left: 1px solid black;
+    }
   </style>
 
-  <main class="main-container">
-    <div class="nav-container">
+  <main class="panel-container vertical">
+    <div class="panel">
       <%- include('partials/nav') %>
     </div>
-    <div class="panel-container">
-      <div class="item-panel">
-        <% items.forEach(item => { %>
-          <li class="item">
-            <div>
-              <img src="/uploads/<%= item.images[0] %>" width="100%" height="100%">
-            </div>
-            <div>
-              <a href="/items/<%= item.id %>"><%= item.name %></a>
-            </div>
-            <div>
-              Amount: <%= item.amount %>
-            </div>
-          </li>
-        <% }) %>
+    <div class="panel fill panel-container horizontal">
+      <div id="nav-panel" class="panel">
+        Navigation panel where things like folders could eventually go or something. Will probably just be removed.
       </div>
 
-      <div class="info-panel">
-        Info Panel
+      <div id="item-panel" class="panel fill item-panel">
+        <ul id="item-list">
+          <% items.forEach(item => { %>
+            <li class="item">
+              <div>
+                <img src="/uploads/<%= item.images[0] %>" alt="<%= item.name %>" title="<%= item.name %>" width="100%" height="100%">
+              </div>
+              <div>
+                <a href="/items/<%= item.id %>"><%= item.name %></a>
+              </div>
+              <div>
+                Amount: <%= item.amount %>
+              </div>
+            </li>
+          <% }) %>
+        </ul>
+      </div>
+
+      <div id="info-panel" class="panel">
+        Info panel where you can eventually edit the items
       </div>
     </div>
   </main>
