--- a/views/list.ejs
+++ b/views/list.ejs
@@ -26,26 +26,44 @@
 <body>
 
   <style>
-    #nav-panel {
-      flex-basis: 200px;
-      border-right: 1px solid black;
-    }
     #item-list {
       margin: 0;
-      padding: 0;
+      padding: 4px;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
     }
     .item {
+      position: relative;
       display: block;
-      margin: 0;
+      margin: 2px;
       padding: 0;
       width: 250px;
       height: 300px;
     }
+    .item-link {
+      color: inherit;
+      text-decoration: none;
+    }
+    .item-link:hover::before, .item-link:active::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: currentColor;
+      opacity: 0.1;
+    }
+    .item-link:active::before {
+      opacity: 0.2;
+    }
+    .item-name {
+      font-weight: bold;
+    }
     #info-panel {
-      flex-basis: 200px;
+      flex-basis: 300px;
+      flex-shrink: 0;
       border-left: 1px solid black;
     }
   </style>
@@ -55,30 +73,28 @@
       <%- include('partials/nav') %>
     </div>
     <div class="panel fill panel-container horizontal">
-      <div id="nav-panel" class="panel">
-        Navigation panel where things like folders could eventually go or something. Will probably just be removed.
-      </div>
-
       <div id="item-panel" class="panel fill item-panel">
         <ul id="item-list">
           <% items.forEach(item => { %>
             <li class="item">
-              <div>
-                <img src="/uploads/<%= item.images[0] %>" alt="<%= item.name %>" title="<%= item.name %>" width="100%" height="100%">
-              </div>
-              <div>
-                <a href="/items/<%= item.id %>"><%= item.name %></a>
-              </div>
-              <div>
-                Amount: <%= item.amount %>
-              </div>
+              <a class="item-link" href="/items/<%= item.id %>">
+                <div>
+                  <img src="/uploads/<%= item.images[0] %>" alt="<%= item.name %>" title="<%= item.name %>" width="100%" height="100%">
+                </div>
+                <div class="item-name">
+                  <%= item.name %>
+                </div>
+                <div>
+                  Amount: <%= item.amount %>
+                </div>
+              </a>
             </li>
           <% }) %>
         </ul>
       </div>
 
       <div id="info-panel" class="panel">
-        Info panel where you can eventually edit the items
+        
       </div>
     </div>
   </main>
