Make it suck less

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,13 +8,16 @@
   <form action="/new" method="POST" enctype="multipart/form-data">
     <%- include('partials/csrf') %>
     <div>
-      <label>Name <input name="name"></label>
+      <label>Name <input name="name" required></label>
     </div>
     <div>
-      <label>Amount <input name="amount"></label>
+      <label>Amount <input type="number" name="amount" required min="0" step="1"></label>
     </div>
     <div>
       <label>Image <input name="image" type="file"></label>
+    </div>
+    <div>
+      <label>Part Number <input name="part-number"></label>
     </div>
     <input type="submit" value="Submit">
   </form>
