--- a/views/item.ejs
+++ b/views/item.ejs
@@ -15,13 +15,21 @@
   <% }) %>
 
   <ul>
-    <li>ID: <%= item.id %></li>
     <li>Amount: <%= item.amount %></li>
+    <li>Part Number: <%= item.partNumber %></li>
   </ul>
 
   <form action="/items/<%= item.id %>/delete" method="POST">
     <%- include('partials/csrf') %>
-    <input type="submit" value="Delete">
+    <input type="submit" value="Delete" name="delete-button">
   </form>
+
+  <script>
+    document.querySelector('[name=delete-button]').onclick = (e) => {
+      if (!confirm('Are you sure you want to delete this?')) {
+        e.preventDefault();
+      }
+    };
+  </script>
 </body>
 </html>
