--- a/views/list.ejs
+++ b/views/list.ejs
@@ -38,10 +38,13 @@
       display: block;
       margin: 2px;
       padding: 0;
-      width: 250px;
-      height: 300px;
+      width: 150px;
     }
     .item-link {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
       color: inherit;
       text-decoration: none;
     }
@@ -60,11 +63,19 @@
     }
     .item-name {
       font-weight: bold;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     #info-panel {
       flex-basis: 300px;
       flex-shrink: 0;
       border-left: 1px solid black;
+    }
+    .item-img {
+
+    }
+    .item-info {
+
     }
   </style>
 
@@ -78,14 +89,18 @@
           <% items.forEach(item => { %>
             <li class="item">
               <a class="item-link" href="/items/<%= item.id %>">
-                <div>
-                  <img src="/uploads/<%= item.images[0] %>" alt="<%= item.name %>" title="<%= item.name %>" width="100%" height="100%">
-                </div>
-                <div class="item-name">
-                  <%= item.name %>
-                </div>
-                <div>
-                  Amount: <%= item.amount %>
+                <% if (item.images.length) { %>
+                  <div class="item-img">
+                    <img src="/uploads/<%= item.images[0] %>" alt="<%= item.name %>" title="<%= item.name %>" width="100%" height="100%">
+                  </div>
+                <% } %>
+                <div class="item-info">
+                  <div class="item-name">
+                    <%= item.name %>
+                  </div>
+                  <div>
+                    Amount: <%= item.amount %>
+                  </div>
                 </div>
               </a>
             </li>
