--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@ nav {
 <nav id="nav">
   <a href="/">Inventory</a>
   <span class="nav-divider"></span>
-  <a href="/new">Add Parts</a>
+  <a href="/inventory/new">Add Parts</a>
 
   <% if (session.user) { %>
     <form style="float: right" action="/logout" method="POST">
